// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/flux/extract extractAllPackageFiles() extracts multiple files 1`] = `
Array [
  Object {
    "datasource": "helm",
    "deps": Array [
      Object {
        "currentValue": "2.0.2",
        "depName": "sealed-secrets",
        "registryUrls": Array [
          "https://bitnami-labs.github.io/sealed-secrets",
        ],
      },
    ],
    "packageFile": "lib/manager/flux/__fixtures__/release.yaml",
  },
]
`;

exports[`manager/flux/extract extractPackageFile() extracts multiple resources 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": "1.7.0",
      "depName": "external-dns",
      "registryUrls": Array [
        "https://kubernetes-sigs.github.io/external-dns/",
      ],
    },
  ],
}
`;
